syntax = "proto3";
package rollpoint;
option go_package = ".;rollpoint";

//操作结果
enum OpResultCode {
    OPRC_Sucess = 0; //成功
    OPRC_Error = 1; //失败
}
//骰宝
//协议包ID
enum RPPACKETID {
    PACKET_ROLLPOINT_ZERO    = 0;// 弃用消息号
    ROLLPOINT_SC_ROOMINFO    = 5430;
    ROLLPOINT_SC_ROOMSTATE   = 5431;
    ROLLPOINT_CS_OP          = 5432;
    ROLLPOINT_SC_PUSHCOIN    = 5433;
    ROLLPOINT_SC_BILL        = 5434;
    ROLLPOINT_SC_PLAYERNUM   = 5435;
    ROLLPOINT_SC_COINLOG     = 5436;
    ROLLPOINT_SC_PLAYERLIST  = 5437;//玩家列表
    ROLLPOINT_SC_OP          = 5438;
}

message RollPointPlayer{
    int32 SnId = 1;
    string Name = 2;
    int32 Sex = 3;
    int32 Head = 4;
    int64 Coin = 5;
    repeated string Params = 6;
    int32 Flag = 7;	//二进制标记 第一位:是否掉线(0:在线 1:掉线) 第二位:是否准备(0:未准备 1:已准备)
    int32 Lately20Win = 9;//最近20局输赢 (赢的次数)
    int32 Lately20Bet = 10;//最近20局总下注
    int32 HeadOutLine = 11;  //头像框
    int32 VIP = 12;
    string City = 13;	//城市
}

message RollPointCoinLog {
    int32 Index = 1;//押注的位置
    repeated int32 Coins = 2;//筹码：数量
}
//玩家列表
message SCRollPointPlayerList {
    repeated RollPointPlayer Data = 1;
    int32 PlayerNum = 2;		//玩家数量
}

//RollPoint_SC_ROOMINFO
message SCRollPointRoomInfo{
    int32 SceneId = 1;     //场景ID
    int32 GameId = 2;	    //游戏id
    int32 RoomMode = 3;    //游戏模式
    int32 SceneType = 4;   //房间类型
    int32 State = 5;	    //房间当前状态
    int32 TimeOut = 6;	    //等待剩余时间 单位:毫秒
    repeated int64 RollLog = 7;     //最近几局的中奖结果
    repeated RollPointCoinLog CoinPool = 8;      //本局已经押注的金币
    RollPointPlayer Player = 9;    //本人的信息
    repeated RollPointCoinLog PushLog = 10;      //本人的押注详细信息
    repeated int32 ParamsEx = 11;	//dbFreeID
    repeated int32 Params = 12;	    //
}
//RollPoint_SC_PLAYERNUM
message SCRollPointPlayerNum{
    int32 PlayerNum = 1;   //现在的用户数量
}
//RollPoint_SC_ROOMSTATE
//0.RollPointSceneStateWait      params:bankertimes      等待  time.Second * 0
//1.RollPointSceneStateStart     params:                 开始  time.Second * 3
//2.RollPointSceneStateBet      params:                 押注  time.Second * 15
//3.RollPointSceneStateOpen      params:                 押注  time.Second * 3
//4.RollPointSceneStateBilled    params:winPos,runPos    结算  time.Second * 5
message SCRollPointRoomState{
    int32 State = 1;		//房间当前状态
    repeated int32 Params = 2;		//状态参数
}
//ROLLPOINT_CS_OP
//0.RollPointPlayerOpPushCoin param:falg-coin 押注
//1.RollPointPlayerOpPlayerList param:玩家列表
message CSRollPointOp{
    int32 OpCode = 1;
    repeated int64 Params = 2;
}
//ROLLPOINT_SC_OP
message SCRollPointOp {
    int32 OpCode = 1; //操作码
    repeated int64 Params = 2; //操作参数
    OpResultCode OpRetCode = 3; //操作结果
    int32 SnId = 4;
}
//RollPoint_SC_PUSHCOIN
message SCRollPointPushCoin{
    OpResultCode OpRetCode = 1;	//结果
    int32 Coin = 2;        //押注金币
    int32 Flag = 3;        //押注位置
    int64 MeTotle = 4;     //总共押注的金币
    int32 PlayerType = 5;  //玩家类型  1:神算子
    int32 SnId = 6;
}
//RollPoint_SC_COINLOG
message SCRollPointCoinLog{
    repeated RollPointCoinLog Coins = 1;//最近1分钟，1-8位置新加的筹码的大小和数量（位置：筹码：数量）
    repeated int32 Pos = 2;
}
//RollPoint_SC_BILL
message SCRollPointBill{
    repeated int32 Point = 1;    //本轮中奖的位置
    repeated int32 Flag = 2;    //本轮中奖的位置
    int64 Coin =3;    //本轮赢取金币
    int64 Banker = 4;  //庄家本轮赢取金币
    repeated RollPointCoinLog Coins =5; //押注列表
}